# ai_assistant

./: .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
res/db/: init.sql
src/: main.rs
src/entities/: entity.rs
src/framework_drivers/: db.rs  vector_db.rs
